<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_color">
        <TextView
            android:id="@+id/tool_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toolbar_title"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:background="@color/btn_color"
                android:textColor="@color/white"
                android:text="@string/btn_1"
                android:textSize="23sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:background="@color/btn_color"
                android:textColor="@color/white"
                android:text="@string/btn_2"
                android:textSize="23sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:background="@color/btn_color"
                android:textColor="@color/white"
                android:text="@string/btn_3"
                android:textSize="23sp" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:background="@color/btn_color"
                android:textColor="@color/white"
                android:text="@string/btn_4"
                android:textSize="23sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:background="@color/btn_color"
                android:textColor="@color/white"
                android:text="@string/btn_5"
                android:textSize="23sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:background="@color/btn_color"
                android:textColor="@color/white"
                android:text="@string/btn_6"
                android:textSize="23sp" />

            <Button
                android:id="@+id/btn7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:background="@color/btn_color"
                android:textColor="@color/white"
                android:text="@string/btn_7"
                android:textSize="23sp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:background="@color/btn_color"
                android:textColor="@color/white"
                android:text="@string/btn_8"
                android:textSize="23sp" />
            <Button
                android:id="@+id/btn9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:background="@color/btn_color"
                android:textColor="@color/white"
                android:text="@string/btn_9"
                android:textSize="23sp" />
            <Button
                android:id="@+id/btn10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:background="@color/btn_color"
                android:textColor="@color/white"
                android:text="@string/btn_10"
                android:textSize="23sp" />


        </LinearLayout>



    </ScrollView>



</RelativeLayout>