<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azkar_background"
    android:orientation="vertical"
    tools:context=".AzkarFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar2_color">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/toolbar2_color"
            android:contentDescription="@string/btn_back"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/tool_bar_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_zoom_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/toolbar2_color"
            android:contentDescription="@string/btn_zoom_out"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_zoom_out" />

        <ImageButton
            android:id="@+id/btn_zoom_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/toolbar2_color"
            android:contentDescription="@string/btn_zoom_in"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_zoom_in"
            tools:ignore="SpeakableTextPresentCheck" />


    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp" />


</LinearLayout>